Add Clothing Store Rest ApI.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/OutfitStoreDB?useSSL=false
-spring.datasource.username=[your_username]
-spring.datasource.password=[your_password]
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 # to show sql logs
@@ -8,6 +8,9 @@ spring.jpa.show-sql=true
 # to prevent null in response
 spring.jackson.default-property-inclusion=NON_NULL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# to show logs in console but not use in production
+logging.level.root=INFO 
+logging.level.org.springframework.web=DEBUG
 spring.jpa.properties.hibernate.format.sql=true
 logging.level.org.springframework.security=DEBUG
 # my-secret-key
